part3/3.02/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: network-ping-log-app-svc
spec:
  type: NodePort
  selector:
    app: network-ping-log-app
  ports:
    - name: ping-pong
      port: 5151
      protocol: TCP
      targetPort: 3000 # The app's exposed port (defined 3000 in the source code)
    - name: logger
      port: 5152
      protocol: TCP
      targetPort: 3001 # The app's exposed port (defined 3001 in the source code)

# Several services in the same deployment/pod can be addressed to their specific ports, as long as they are targeted correctly
# If they need to be reached from the host machine, then ingress needs to account fot this in different paths
