part3/3.02/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-ping-log-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: network-ping-log-app-svc
                port:
                  number: 5151 # points to the port assigned to the read-write-app ClusterIp service (this is inside the cluster)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: network-ping-log-app-svc
                port:
                  number: 5152 # points to the port assigned to the read-write-app ClusterIp service (this is inside the cluster)

# In GKE,  The Ingress performs health checks by GET requesting / and expects an HTTP 200 response.
# Reason you will see constant activity
# https://cloud.google.com/kubernetes-engine/docs/how-to/exposing-apps
